.deploy/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: home-sensors
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello-world.home.coolkev.com
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hello-world.home.coolkev.com
      secretName: hello-world-tls
  rules:
    - host: hello-world.home.coolkev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
